# ros2can

./: README.md  package.xml  setup.py
config/: ros2can.yaml
firmware/b-g431-esc1_can2io/: README.md  platformio.ini
firmware/b-g431-esc1_can2io/src/: can_task.cpp  can_task.hpp  config.hpp  frame_data.cpp  frame_data.hpp  main.cpp
firmware/esp32_s3_serial_bridge/src/: config.hpp  frame_data.hpp  serial_task.cpp
firmware/esp32_serial_bridge/: README.md
firmware/esp32_serial_bridge/src/: config.hpp  main.cpp  pin_ctrl_init.cpp  pin_ctrl_task.cpp  robomas.cpp  robomas.hpp
firmware/xiao-esp32-s3_can2io/: README.md
firmware/xiao-esp32-s3_can2io/src/: can_task.cpp  can_task.hpp  config.hpp  defs.hpp  main.cpp  robomas.cpp  robomas.hpp  serial_task.cpp
firmware/xiao_esp32_s3_smd_serial_bridge/: README.md
firmware/xiao_esp32_s3_smd_serial_bridge/src/: config.hpp  defs.hpp  frame_data.cpp  frame_data.hpp  main.cpp  pin_ctrl_init.cpp  pin_ctrl_task.cpp  pin_ctrl_task.hpp  status_led.cpp  status_led.hpp
launch/: ros2can.launch.py
ros2can/: can_monitor.py  device_panel.py  device_profiles.py  frame_codec.py  hardware_manager.py  main.py  main_window.py  profile_editor.py  ros_backend.py  serial_link.py  widgets.py
