<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2can</name>
  <version>0.0.0</version>
  <description>
    xiao_esp32_s3_smd_serial_bridge (CANバスで複数マイコンをホストする serial_bridge
    ファームウェア) 専用のスタンドアローンGUI。serial_bridge の後継として、
    シリアルポートのスキャン・専有・フレーム送受信を自前で行う。
    ホスト機の DEVICE_ID を選び、CANバス上の各ノード(マイコン)を選択して
    アクチュエータへ直接指令値を送信したり、センサ値をリアルタイム表示する。
  </description>
  <maintainer email="tashikou1682@gmail.com">dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
